--- a/client/src/index.html
+++ b/client/src/index.html
@@ -11,7 +11,7 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="../src/styles.css" />
   </head>
   <body>
     <!--[if lt IE 7]>
@@ -20,9 +20,7 @@
         <a href="#">upgrade your browser</a> to improve your experience.
       </p>
     <![endif]-->
-    This project provides a RESTful API for a database containing IMDB
-    information
-
+    <div id="app"></div>
     <script src="" async defer></script>
   </body>
 </html>
